--- a/.github/workflows/commit-id.yml
+++ b/.github/workflows/commit-id.yml
@@ -1,4 +1,4 @@
-name: show commit it
+name: show commit id and password
 
 on: [push]
 
@@ -11,3 +11,7 @@ jobs:
       env:
         COMMIT_ID: ${{ github.sha }}
       run: echo "commit id => $COMMIT_ID"
+    - name: Show password
+      env:
+        MY_PASSWORD: ${{ secrets.PASSWORD }}
+      run: ehco "password => $MY_PASSWORD"
